--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "udaan-20",
+  "name": "udaan",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "bootstrap-vue": "^2.5.0",
+    "ks-vue-scrollmagic": "^1.0.2",
+    "kute.js": "^1.6.6",
+    "register-service-worker": "^1.6.2",
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.6",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
@@ -18,7 +23,11 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
+    "@vue/cli-plugin-pwa": "^4.2.3",
+    "vue-gh-pages": "^1.19.0"
   },
   "eslintConfig": {
     "root": true,
