--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js"
   },
   "dependencies": {
     "bootstrap-vue": "^2.5.0",
+    "express": "^4.17.1",
     "ks-vue-scrollmagic": "^1.0.2",
     "kute.js": "^1.6.6",
+    "particles.js": "^2.0.0",
+    "particlesjs": "^2.2.3",
     "register-service-worker": "^1.6.2",
+    "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
-    "vuex": "^3.1.2",
-    "particles.js": "^2.0.0",
-    "particlesjs": "^2.2.3"
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
